--- a/src/unsupported/Makefile.am
+++ b/src/unsupported/Makefile.am
@@ -79,6 +79,7 @@ pbs_rmget_LDADD = \
 	$(top_builddir)/src/lib/Libnet/libnet.a \
 	$(top_builddir)/src/lib/Libpbs/.libs/libpbs.a \
 	$(top_builddir)/src/lib/Libutil/libutil.a \
+	$(top_builddir)/src/lib/Libsec/.libs/libsec.la \
 	-lpthread \
 	@libz_lib@ \
 	@KRB5_LIBS@
