--- a/configure.ac
+++ b/configure.ac
@@ -382,6 +382,7 @@ AC_CONFIG_FILES([
 	src/lib/Libauth/Makefile
 	src/lib/Libauth/gss/Makefile
 	src/lib/Libauth/munge/Makefile
+	src/lib/Liblicensing/Makefile
 	src/lib/Makefile
 	src/modules/Makefile
 	src/modules/python/Makefile
