--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -43,6 +43,7 @@ sbin_PROGRAMS = pbs_server.bin pbs_comm
 
 pbs_server_bin_CPPFLAGS = \
 	-I$(top_srcdir)/src/include \
+	-I$(top_srcdir)/src/lib/Liblicensing \
 	@expat_inc@ \
 	@libical_inc@ \
 	@libz_inc@ \
@@ -60,6 +61,7 @@ pbs_server_bin_LDADD = \
 	$(top_builddir)/src/lib/Libpython/libpbspython_svr.a \
 	$(top_builddir)/src/lib/Libdb/libpbsdb.la \
 	$(top_builddir)/src/lib/Libpbs/.libs/libpbs.a \
+	$(top_builddir)/src/lib/Liblicensing/.libs/liblicensing.so \
 	@expat_lib@ \
 	@libz_lib@ \
 	@libical_lib@ \
@@ -75,7 +77,6 @@ pbs_server_bin_SOURCES = \
 	array_func.c \
 	attr_recov.c \
 	attr_recov_db.c \
-	checkkey.c \
 	dis_read.c \
 	failover.c \
 	geteusernam.c \
@@ -85,7 +86,7 @@ pbs_server_bin_SOURCES = \
 	job_func.c \
 	job_recov_db.c \
 	job_route.c \
-	license_client.c \
+	licensing_func.c \
 	mom_info.c \
 	node_func.c \
 	node_manager.c \
