--- a/src/lib/Liblicensing/Makefile.am
+++ b/src/lib/Liblicensing/Makefile.am
@@ -1,23 +1,46 @@
-# Copyright (C) 2003-2020 Altair Engineering, Inc. All rights reserved.
-# Copyright notice does not imply publication.
 #
-# ALTAIR ENGINEERING INC. Proprietary and Confidential. Contains Trade Secret
-# Information. Not for use or disclosure outside of Licensee's organization.
-# The software and information contained herein may only be used internally and
-# is provided on a non-exclusive, non-transferable basis. License may not
-# sublicense, sell, lend, assign, rent, distribute, publicly display or
-# publicly perform the software or other information provided herein,
-# nor is Licensee permitted to decompile, reverse engineer, or
-# disassemble the software. Usage of the software and other information
-# provided by Altair(or its resellers) is only as explicitly stated in the
-# applicable end user license agreement between Altair and Licensee.
-# In the absence of such agreement, the Altair standard end user
-# license agreement terms shall govern.
+# Copyright (C) 1994-2020 Altair Engineering, Inc.
+# For more information, contact Altair at www.altair.com.
+#
+# This file is part of both the OpenPBS software ("OpenPBS")
+# and the PBS Professional ("PBS Pro") software.
+#
+# Open Source License Information:
+#
+# OpenPBS is free software. You can redistribute it and/or modify it under
+# the terms of the GNU Affero General Public License as published by the
+# Free Software Foundation, either version 3 of the License, or (at your
+# option) any later version.
+#
+# OpenPBS is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public
+# License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# Commercial License Information:
+#
+# PBS Pro is commercially licensed software that shares a common core with
+# the OpenPBS software.  For a copy of the commercial license terms and
+# conditions, go to: (http://www.pbspro.com/agreement.html) or contact the
+# Altair Legal Department.
+#
+# Altair's dual-license business model allows companies, individuals, and
+# organizations to create proprietary derivative works of OpenPBS and
+# distribute them - whether embedded or bundled with other software -
+# under a commercial license agreement.
+#
+# Use of Altair's trademarks, including but not limited to "PBS™",
+# "OpenPBS®", "PBS Professional®", and "PBS Pro™" and Altair's logos is
+# subject to Altair's trademark licensing policies.
 
 lib_LTLIBRARIES = liblicensing.la
 
 liblicensing_la_CPPFLAGS = \
-	-I$(pbssrc_dir)/src/include
+	-I$(pbssrc_dir)/src/include \
+	-I$(top_srcdir)/src/include
 
 liblicensing_la_LDFLAGS = -version-info 0:0:0
 
