Adding configure option to disable security checks

--- a/configure.ac
+++ b/configure.ac
@@ -340,6 +340,7 @@ PBS_AC_WITH_KRBAUTH
 PBS_AC_WITH_MIN_STACK_LIMIT
 PBS_AC_DISABLE_SHELL_PIPE
 PBS_AC_DISABLE_SYSLOG
+PBS_AC_DISABLE_SECURITY_CHECK
 PBS_AC_ENABLE_ALPS
 PBS_AC_WITH_LIBZ
 PBS_AC_ENABLE_PTL
