--- a/src/resmom/Makefile.am
+++ b/src/resmom/Makefile.am
@@ -78,6 +78,7 @@ pbs_mom_SOURCES = \
 	$(top_srcdir)/src/server/mom_info.c \
 	$(top_srcdir)/src/server/attr_recov.c \
 	$(top_srcdir)/src/server/dis_read.c \
+	$(top_srcdir)/src/server/jattr_get_set.c \
 	$(top_srcdir)/src/server/job_func.c \
 	$(top_srcdir)/src/server/process_request.c \
 	$(top_srcdir)/src/server/reply_send.c \
