--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -81,11 +81,9 @@ chk_tree_LDADD = ${common_libs}
 chk_tree_SOURCES = chk_tree.c
 
 pbs_ds_monitor_CPPFLAGS = ${common_cflags}
-pbs_ds_monitor_LDFLAGS = "-Wl,-rpath,$(DESTDIR)$(libdir)"
 pbs_ds_monitor_LDADD = \
-	$(top_builddir)/src/lib/Libdb/libdb.so \
+	$(top_builddir)/src/lib/Libdb/libpbsdb.la \
 	${common_libs} \
-	@database_ldflags@ \
 	-lssl \
 	-lcrypto
 
@@ -195,15 +193,11 @@ printjob_bin_SOURCES = printjob.c $(top_srcdir)/src/lib/Libcmds/cmds_common.c
 printjob_svr_bin_CPPFLAGS = \
 	${common_cflags} \
 	-I$(top_srcdir)/src/lib/Libdb \
-	@database_inc@ \
 	-DPRINTJOBSVR
 
-printjob_svr_bin_LDFLAGS = "-Wl,-rpath,$(DESTDIR)$(libdir)"
-
 printjob_svr_bin_LDADD = \
-	$(top_builddir)/src/lib/Libdb/libdb.so \
+	$(top_builddir)/src/lib/Libdb/libpbsdb.la \
 	${common_libs} \
-	@database_ldflags@ \
 	-lssl \
 	-lcrypto
 
