Re-structured the file orientation

--- a/src/resmom/Makefile.am
+++ b/src/resmom/Makefile.am
@@ -97,7 +97,7 @@ pbs_mom_SOURCES = \
 	mom_comm.c \
 	mom_hook_func.c \
 	mom_inter.c \
-	mom_func.c \
+	linux/mom_func.c \
 	mom_main.c \
 	mom_updates_bundle.c \
 	mom_pmix.c \
