added missing @swig_py_inc@ when generating pbs_ifl_wrap.c

--- a/src/lib/Libifl/Makefile.am
+++ b/src/lib/Libifl/Makefile.am
@@ -39,7 +39,8 @@ BUILT_SOURCES = pbs_ifl_wrap.c
 EXTRA_DIST = pbs_ifl.i
 
 pbs_ifl_wrap.c: pbs_ifl.i
-	@swig_dir@/bin/swig -python -outcurrentdir -I$(top_srcdir)/src/include $^
+	@swig_dir@/bin/swig -python -outcurrentdir \
+		@swig_py_inc@ -I$(top_srcdir)/src/include $^
 
 CLEANFILES = \
 	pbs_ifl.py \
