--- a/configure.ac
+++ b/configure.ac
@@ -332,6 +332,7 @@ PBS_AC_WITH_LIBZ
 PBS_AC_ENABLE_PTL
 PBS_AC_SYSTEMD_UNITDIR
 PBS_AC_WITH_LIBUNDOLR
+PBS_AC_PATCH_LIBTOOL
 
 AC_CONFIG_FILES([
 	openpbs.spec
