Adding new IFL to send multiple jobs in single batch request
Addressing review comments

fix memory in qdel

--- a/src/lib/Libpbs/Makefile.am
+++ b/src/lib/Libpbs/Makefile.am
@@ -159,6 +159,8 @@ libpbs_la_SOURCES = \
 	../Libifl/dec_JobFile.c \
 	../Libifl/dec_JobId.c \
 	../Libifl/dec_Manage.c \
+	../Libifl/dec_DelJob.c \
+	../Libifl/dec_DelJobList.c \
 	../Libifl/dec_MsgJob.c \
 	../Libifl/dec_MoveJob.c \
 	../Libifl/dec_UserCred.c \
@@ -186,6 +188,7 @@ libpbs_la_SOURCES = \
 	../Libifl/enc_JobId.c \
 	../Libifl/enc_UserCred.c \
 	../Libifl/enc_Manage.c \
+	../Libifl/enc_Delete.c \
 	../Libifl/enc_MsgJob.c \
 	../Libifl/enc_MoveJob.c \
 	../Libifl/enc_QueueJob.c \
@@ -210,7 +213,9 @@ libpbs_la_SOURCES = \
 	../Libifl/int_hook.c \
 	../Libifl/int_jcred.c \
 	../Libifl/int_manager.c \
+	../Libifl/int_delete2.c \
 	../Libifl/int_manage2.c \
+	../Libifl/int_deleteput.c \
 	../Libifl/int_msg2.c \
 	../Libifl/int_rdrpy.c \
 	../Libifl/int_sig2.c \
@@ -232,9 +237,11 @@ libpbs_la_SOURCES = \
 	../Libifl/pbs_loadconf.c \
 	../Libifl/pbs_quote_parse.c \
 	../Libifl/pbs_statfree.c \
+	../Libifl/pbs_delstatfree.c \
 	../Libifl/pbsD_alterjo.c \
 	../Libifl/pbsD_connect.c \
 	../Libifl/pbsD_deljob.c \
+	../Libifl/pbsD_deljob2.c \
 	../Libifl/pbsD_holdjob.c \
 	../Libifl/pbsD_locjob.c \
 	../Libifl/pbsD_manager.c \
