--- a/src/cmds/scripts/pbs_init.d.in
+++ b/src/cmds/scripts/pbs_init.d.in
@@ -258,7 +258,7 @@ check_hostname() {
 }
 
 start_pbs() {
-	echo "Starting PBS"
+	echo "Starting PBS $1"
 
 	# Perform sanity checks
 	server_hostname=`get_server_hostname`
@@ -294,7 +294,7 @@ start_pbs() {
 		homever=`cat ${PBS_HOME}/pbs_version`
 		[ "${qstatver}" != "${homever}" ] && needmakehome=3
 	fi
-	[ ${needmakehome} -eq 0 -a "${PBS_START_SERVER}" != "0" -a ! -d "${PBS_HOME}/datastore" ] && needmakehome=4
+	[ ${needmakehome} -eq 0 -a ! -d "${PBS_HOME}/datastore" ] && needmakehome=4
 
 	if [ ${needmakehome} -ne 0 -a ! -x ${PBS_EXEC}/libexec/pbs_habitat ]; then
 		echo "***" >&2
@@ -307,19 +307,19 @@ start_pbs() {
 		1)
 			echo PBS Home directory ${PBS_HOME} does not exist.
 			echo Running ${PBS_EXEC}/libexec/pbs_habitat to create it.
-			${PBS_EXEC}/libexec/pbs_habitat || return 1
+			${PBS_EXEC}/libexec/pbs_habitat $1 || return 1
 			echo Home directory ${PBS_HOME} created.
 			;;
 		2|3)
 			echo PBS Home directory ${PBS_HOME} needs updating.
 			echo Running ${PBS_EXEC}/libexec/pbs_habitat to update it.
-			${PBS_EXEC}/libexec/pbs_habitat || return 1
+			${PBS_EXEC}/libexec/pbs_habitat $1 || return 1
 			echo Home directory ${PBS_HOME} updated.
 			;;
 		4)
 			echo PBS Home directory ${PBS_HOME} needs datastore.
 			echo Running ${PBS_EXEC}/libexec/pbs_habitat to initialize it.
-			${PBS_EXEC}/libexec/pbs_habitat || return 1
+			${PBS_EXEC}/libexec/pbs_habitat $1 || return 1
 			echo Datastore directory ${PBS_HOME}/datastore initialized.
 			;;
 	esac
@@ -340,7 +340,7 @@ start_pbs() {
 		echo "Warning: Please inform your administrator immediately or contact Altair customer support"
 	fi
 
-	if [ "${PBS_START_COMM}" -gt 0 ]; then
+	if [ "$1" == "pbs_comm" -o "${PBS_START_COMM}" -gt 0 ]; then
 		if check_prog "pbs_comm" ; then
 			echo "PBS comm already running."
 		else
@@ -355,7 +355,7 @@ start_pbs() {
 		fi
 	fi
 
-	if [ "${PBS_START_MOM}" -gt 0 ]; then
+	if [ "$1" == "pbs_mom" -o "${PBS_START_MOM}" -gt 0 ]; then
 		if check_prog "mom" ; then
 			echo "PBS mom already running."
 		else
@@ -375,7 +375,7 @@ start_pbs() {
 		fi
 	fi
 
-	if [ "${PBS_START_SCHED}" -gt 0 ]; then
+	if [ "$1" == "pbs_sched" -o "${PBS_START_SCHED}" -gt 0 ]; then
 		if check_prog "sched" ; then
 			echo "PBS scheduler already running."
 		else
@@ -393,7 +393,7 @@ start_pbs() {
 		fi
 	fi
 
-	if [ "${PBS_START_SERVER}" -gt 0 ] ; then
+	if [ "$1" == "pbs_server" -o "${PBS_START_SERVER}" -gt 0 ] ; then
 		if check_prog "server" ; then
 			echo "PBS Server already running."
 		else
@@ -433,9 +433,9 @@ start_pbs() {
 }
 
 stop_pbs() {
-	echo "Stopping PBS"
+	echo "Stopping PBS $1"
 	update_pids
-	if [ "${PBS_START_SERVER}" -gt 0 ] ; then
+	if [ "$1" == "pbs_server" -o "${PBS_START_SERVER}" -gt 0 ] ; then
 		active_server=`lc_host_name \`${PBS_EXEC}/bin/qstat -Bf 2>/dev/null | \
 		grep "server_host = " | \
 		sed -e "s/.*server_host = //"\``
@@ -468,13 +468,13 @@ stop_pbs() {
 			${PBS_EXEC}/sbin/pbs_dataservice stop > /dev/null 2>&1
 		fi
 	fi
-	if [ "${PBS_START_MOM}" -gt 0 ] ; then
+	if [ "$1" == "pbs_mom" -o "${PBS_START_MOM}" -gt 0 ] ; then
 		if check_prog "mom" ; then
 			kill ${pbs_mom_pid}
 			echo "PBS mom - was pid: ${pbs_mom_pid}"
 		fi
 	fi
-	if [ "${PBS_START_SCHED}" -gt 0 ] ; then
+	if [ "$1" == "pbs_sched" -o "${PBS_START_SCHED}" -gt 0 ] ; then
 		if check_prog "sched" ; then
 			if [ ${is_secondary} -eq 0 ] ; then
 				kill ${pbs_sched_pid}
@@ -486,7 +486,7 @@ stop_pbs() {
 			fi
 		fi
 	fi
-	if [ "${PBS_START_COMM}" -gt 0 ] ; then
+	if [ "$1" == "pbs_comm" -o "${PBS_START_COMM}" -gt 0 ] ; then
 		if check_prog "pbs_comm" ; then
 			if [ ${is_secondary} -eq 0 ] ; then
 				kill -TERM ${pbs_comm_pid}
@@ -509,22 +509,22 @@ stop_pbs() {
 	do
 		sleep 1
 		something_running=""
-		if [ "${PBS_START_SERVER}" -gt 0 ] ; then
+		if [ "$1" == "pbs_server" -o "${PBS_START_SERVER}" -gt 0 ] ; then
 			if check_prog "server" ; then
 				something_running=" pbs_server"
 			fi
 		fi
-		if [ "${PBS_START_MOM}" -gt 0 ] ; then
+		if [ "$1" == "pbs_mom" -o "${PBS_START_MOM}" -gt 0 ] ; then
 			if check_prog "mom" ; then
 				something_running="${something_running} pbs_mom"
 			fi
 		fi
-		if [ "${PBS_START_SCHED}" -gt 0 ] ; then
+		if [ "$1" == "pbs_sched" -o "${PBS_START_SCHED}" -gt 0 ] ; then
 			if check_prog "sched" ; then
 				something_running="${something_running} pbs_sched"
 			fi
 		fi
-		if [ "${PBS_START_COMM}" -gt 0 ] ; then
+		if [ "$1" == "pbs_comm" -o "${PBS_START_COMM}" -gt 0 ] ; then
 			if check_prog "pbs_comm" ; then
 				something_running=" pbs_comm"
 			fi
@@ -534,34 +534,34 @@ stop_pbs() {
 		fi
 		waitloop=`expr ${waitloop} + 1`
 	done
-	echo "Unable to stop PBS,${something_running} still active"
+	echo "Unable to stop PBS $1 ,${something_running} still active"
 	exit 1
 }
 
 status_pbs() {
 	update_pids
-	if [ "${PBS_START_SERVER}" -gt 0 ]; then
+	if [ "$1" == "pbs_server" -o "${PBS_START_SERVER}" -gt 0 ]; then
 		if check_prog "server" ; then
 			echo "pbs_server is pid ${pid}"
 		else
 			echo "pbs_server is not running"
 		fi
 	fi
-	if [ "${PBS_START_MOM}" -gt 0 ]; then
+	if [ "$1" == "pbs_mom" -o "${PBS_START_MOM}" -gt 0 ]; then
 		if check_prog "mom" ; then
 			echo "pbs_mom is pid ${pbs_mom_pid}"
 		else
 			echo "pbs_mom is not running"
 		fi
 	fi
-	if [ "${PBS_START_SCHED}" -gt 0 ]; then
+	if [ "$1" == "pbs_sched" -o "${PBS_START_SCHED}" -gt 0 ]; then
 		if check_prog "sched" ; then
 			echo "pbs_sched is pid ${pbs_sched_pid}"
 		else
 			echo "pbs_sched is not running"
 		fi
 	fi
-	if [ "${PBS_START_COMM}" -gt 0 ]; then
+	if [ "$1" == "pbs_comm" -o "${PBS_START_COMM}" -gt 0 ]; then
 		if check_prog "pbs_comm" ; then
 			echo "pbs_comm is ${pbs_comm_pid}"
 		else
@@ -622,14 +622,14 @@ pre_start_pbs()
 		(
 			TEMP_DIR=${PBS_TMPDIR:-${TMPDIR:-"/var/tmp"}}
 			TEMPFILE=${TEMP_DIR}/start_pbs_logs_tmp_$$
-			start_pbs > ${TEMPFILE} 2>&1
+			start_pbs $1 > ${TEMPFILE} 2>&1
 			ret=$?
 			logger -i -t PBS -f ${TEMPFILE}
 			rm -f ${TEMPFILE}
 			exit ${ret}
 		) &
 	else
-		start_pbs
+		start_pbs $1
 		exit $?
 	fi
 }
@@ -718,18 +718,18 @@ case "`basename $0`" in
 				echo "Stopping PBS"
 				;;
 			status)
-				status_pbs
+				status_pbs "$2"
 				;;
 			start)
-				pre_start_pbs
+				pre_start_pbs "$2"
 				;;
 			stop)
-				stop_pbs
+				stop_pbs "$2"
 				;;
 			restart)
 				echo "Restarting PBS"
-				stop_pbs
-				pre_start_pbs
+				stop_pbs "$2"
+				pre_start_pbs "$2"
 				;;
 			*)
 				echo "Usage: `basename $0` --version"
