--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -89,6 +89,7 @@ pbs_server_bin_SOURCES = \
 	licensing_func.c \
 	mom_info.c \
 	multi_svr.c \
+	nattr_get_set.c \
 	node_func.c \
 	node_manager.c \
 	node_recov_db.c \
