--- a/src/modules/python/Makefile.am
+++ b/src/modules/python/Makefile.am
@@ -77,6 +77,7 @@ _pbs_v1_la_SOURCES = \
 	$(top_srcdir)/src/server/jattr_get_set.c \
 	$(top_srcdir)/src/server/sattr_get_set.c \
 	$(top_srcdir)/src/server/qattr_get_set.c \
+	$(top_srcdir)/src/server/nattr_get_set.c \
 	pbs_v1_module_init.c
 _pbs_v1_la_CPPFLAGS = \
 	-I$(top_srcdir)/src/include \
