--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -88,6 +88,7 @@ pbs_server_bin_SOURCES = \
 	job_route.c \
 	licensing_func.c \
 	mom_info.c \
+	nattr_get_set.c \
 	node_func.c \
 	node_manager.c \
 	node_recov_db.c \
