systemd missing daemon only start

--- a/configure.ac
+++ b/configure.ac
@@ -363,6 +363,7 @@ AC_CONFIG_FILES([
 	src/cmds/scripts/modulefile
 	src/cmds/scripts/pbs_habitat
 	src/cmds/scripts/pbs_init.d
+	src/cmds/scripts/pbs_wrap
 	src/cmds/scripts/pbs_poerun
 	src/cmds/scripts/pbs_postinstall
 	src/cmds/scripts/pbs.service
